managed to get an actor component compiling

--- a/MyRealsensePlugin/MyRealsensePlugin.uproject
+++ b/MyRealsensePlugin/MyRealsensePlugin.uproject
@@ -10,5 +10,11 @@
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
 		}
+	],
+	"Plugins": [
+		{
+			"Name": "PointCloudRenderer",
+			"Enabled": true
+		}
 	]
 }
