changing plugin to be more blueprint-like. not working yet though

--- a/MyRealsensePlugin/MyRealsensePlugin.uproject
+++ b/MyRealsensePlugin/MyRealsensePlugin.uproject
@@ -13,7 +13,11 @@
 	],
 	"Plugins": [
 		{
-			"Name": "PointCloudRenderer",
+			"Name": "RuntimeMeshLoader",
+			"Enabled": true
+		},
+		{
+			"Name": "SRWorks",
 			"Enabled": true
 		}
 	]
